--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,9 @@
     "stripInternal": true,
     "lib": ["es2015"]
   },
+  "include": ["**/*.ts"],
   "exclude": [
     "node_modules",
-    "test/data"
   ]
 }
 
